--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-konva": "^1.1.3",
+    "react-redux": "^5.0.5",
     "react-scripts": "1.0.10",
+    "redux": "^3.7.1",
     "semantic-ui-css": "^2.2.10",
     "semantic-ui-react": "^0.70.0"
   },
